# gameoflife

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  config.txt
app/source/: main.cpp
app/source/core/: Facade.cpp  Facade.h
app/source/core/director/builder/: DirectorBuilder.cpp  DirectorBuilder.h
app/source/core/engine/: Cell.cpp  Cell.h  Engine.cpp  Engine.h  Grid.cpp  Grid.h  pendiente.txt.txt
app/source/core/engine/builder/: EngineBuilder.cpp  EngineBuilder.h
app/source/core/engine/factory/: RulesFactory.cpp  RulesFactory.h
app/source/messaging/: Message.cpp  Message.h
app/tests/: CMakeLists.txt
app/tests/GameOfLifeTest/: GameOfLifeTest.vcxproj  test.cpp
app/tests/GameOfLifeTest/x64/Debug/GameOfLifeTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  GameOfLifeTest.lastbuildstate
app/tests/src/: Cell_test.cpp  DirectorBuilder_test.cpp  Director_test.cpp  EngineBuilder_test.cpp  Engine_test.cpp  Grid_test.cpp  RuleProximity_test.cpp  RulesFactory_test.cpp  main.cpp
cmake/: CMakeLists.txt  filtersMacro.txt  testMacro.txt
lib/: CMakeLists.txt
lib/include/core/: Facade.h
lib/include/core/director/: ActionBase.h  ActionStart.h  ActionStop.h  Director.h  IAction.h
lib/include/core/director/builder/: DirectorBuilder.h
lib/include/core/director/factory/: ActionFactory.h  IActionFactory.h
lib/include/core/engine/: Cell.h  Engine.h  Grid.h  IRule.h  RuleProximity.h
lib/include/core/engine/builder/: EngineBuilder.h
lib/include/core/engine/factory/: IRule.h  RulesFactory.h
lib/include/messaging/: Message.h
lib/source/core/: Facade.cpp
lib/source/core/director/: ActionBase.cpp  ActionStart.cpp  ActionStop.cpp  Director.cpp  IAction.cpp
lib/source/core/director/builder/: DirectorBuilder.cpp
lib/source/core/director/factory/: ActionFactory.cpp
lib/source/core/engine/: Cell.cpp  Engine.cpp  Grid.cpp  IRule.cpp  RuleProximity.cpp
lib/source/core/engine/builder/: EngineBuilder.cpp
lib/source/core/engine/factory/: RulesFactory.cpp
lib/source/messaging/: Message.cpp  pendiente.txt.txt
tests/: CMakeLists.txt
tests/src/: Grid_test.cpp
